# OpenSoupRating

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  TRADEMARK.md  loadout_cost_analysis.json  main.py  open_soup_rating_lib.py  pyproject.toml  ratings_output.json  weights.json  xvx_breakdown_data.json
.github/workflows/: ci.yml  release.yml
data/: loadout_cost_analysis.json  normalization_params.json  weights.json  xvx_data.json
docs/: LICENSE.md
open_soup_rating/: __init__.py  cli.py
open_soup_rating/components/: __init__.py  adra.py  apr.py  death_contrib.py  kill_contrib.py
open_soup_rating/core/: __init__.py  component_registry.py  rating_calculator.py
open_soup_rating/data/: __init__.py  loader.py
open_soup_rating/utils/: config.py  validation.py
src/: adra.py  apr.py  data_loader.py  economic_impact.py  post_round_modifier.py  rating_calculator.py  xvx_impact.py
tests/: __init__.py  test_basic.py
